# -todeQt-c-

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  skills-lock.json
.agents/skills/liquid-glass/: SKILL.md
.claude/skills/: qt-cmake-project  qt-cpp-docs  qt-cpp-review  qt-figma-component-generation  qt-figma-token-extraction  qt-qml  qt-qml-docs  qt-qml-profiler  qt-qml-review  qt-qml-test  qt-qml-test-run  qt-ui-design
docs/: 运行命令.md
docs/superpowers/mockups/: pomodoro-redesign.html  pomoidle-redesign.html
docs/superpowers/plans/: 2026-06-09-phase2-week-stats-month.md  2026-06-09-pomodoro-todo-mvp.md  2026-06-10-countdown-feature.md  2026-06-10-focus-history-part1.md  2026-06-10-focus-history-part2.md  2026-06-10-focus-history-part3.md  2026-06-10-phase3-category-management.md  2026-06-10-phase3-data-export.md  2026-06-10-phase3-visual-animations.md  2026-06-10-ui-optimization.md  2026-06-11-arrow-navigation-part1.md  2026-06-11-arrow-navigation-part2.md  2026-06-11-statistics-time-range-part1.md  2026-06-11-statistics-time-range-part2.md  2026-06-14-statistics-trend-comparison.md  2026-06-14-task-completion-animation.md  2026-06-14-warm-theme-enhancement.md  2026-06-15-visual-consistency-tokens.md  2026-06-16-daily-recurring-tasks.md  2026-06-26-dual-mode-pomodoro.md  2026-07-05-focus-ux-part1-settings-direct-start.md  2026-07-05-focus-ux-part2-status-toast.md  2026-07-05-focus-ux-part3-sound-custom.md  2026-07-05-pomoidle-progressive-disclosure.md  2026-07-06-background-motifs-phase2.md  2026-07-06-background-part1-infra.md  2026-07-06-background-part2-glassify.md  2026-07-06-task-gaps-part1-rollover.md  2026-07-06-task-gaps-part2-edit-undo.md  2026-07-07-declutter-part1-focusview-components.md  2026-07-07-declutter-part4-taskitem-particles.md  2026-07-07-focus-timer-ring-redesign.md  2026-07-07-settings-hub-part1-structure.md  2026-07-07-settings-hub-part2-reduce-motion.md  2026-07-07-type-identity.md  2026-07-10-focus-immersive-fullscreen.md  2026-07-10-logical-day-part1-core.md  2026-07-10-logical-day-part2-views.md  2026-07-11-background-theme-overhaul.md  2026-07-14-settings-ui-local-deployment.md
docs/superpowers/specs/: 2026-06-09-pomodoro-todo-design.md  2026-06-10-countdown-feature-design.md  2026-06-10-focus-history-design.md  2026-06-10-phase3-categories-export-animations.md  2026-06-10-ui-optimization.md  2026-06-11-statistics-arrow-navigation.md  2026-06-11-statistics-time-range-selector.md  2026-06-14-statistics-trend-comparison.md  2026-06-14-task-completion-animation.md  2026-06-14-warm-theme-enhancement.md  2026-06-15-visual-consistency-tokens-design.md  2026-06-16-daily-recurring-tasks-design.md  2026-06-26-dual-mode-pomodoro-design.md  2026-07-05-focus-ux-improvements-design.md  2026-07-05-pomoidle-progressive-disclosure-design.md  2026-07-06-background-motifs-phase2-design.md  2026-07-06-background-themes-design.md  2026-07-06-task-management-gaps-design.md  2026-07-07-focus-timer-ring-redesign-design.md  2026-07-07-logical-day-boundary-design.md  2026-07-07-settings-hub-sidebar-declutter-design.md  2026-07-07-type-identity-design.md  (+4 more)
docs/testing/: phase3-category-management-test.md  phase3-data-export-test.md  phase3-visual-animations-test.md
qml/: LogicalDay.js  MainWindow.qml  Theme.qml  main.qml
qml/components/: AddTaskDialog.qml  BackgroundWallpaper.qml  CategoryDialog.qml  ChartBar.qml  ChartPie.qml  ColorPicker.qml  CompletionParticles.qml  CountdownBanner.qml  CountdownDialog.qml  CountdownItem.qml  DailyFocusGoalEditor.qml  DashboardCountdownHero.qml  DashboardStatCard.qml  DashboardTimerPanel.qml  DurationStepper.qml  EditTaskDialog.qml  ExportDialog.qml  FocusGoalCard.qml  FocusGoalStrip.qml  FocusImmersiveOverlay.qml  FocusLiveSeconds.qml  FocusRing.qml  FocusTimeline.qml  GlassPanel.qml  GlassToolbarButton.qml  GlyphIcon.qml  ImmersionWindowSync.qml  LiquidGlassBackdrop.qml  MiniBarChart.qml  MiniTrendChart.qml  PresetButton.qml  RoutineDialog.qml  SegmentedSwitch.qml  SettingsDialog.qml  Sidebar.qml  StatCard.qml  TaskItem.qml  Toast.qml
qml/views/: CountdownView.qml  DashboardFormat.js  DashboardView.qml  FocusView.qml  MonthGoalFormat.js  MonthGoalView.qml  StatisticsFormat.js  StatisticsView.qml  TodayTaskView.qml  WeekPlanView.qml
resources/: fonts.qrc  qml.qrc  shaders.qrc  wallpapers.qrc
resources/app-icons/: PomodoroTodo.icns
resources/shaders/: liquid_glass.frag.qsb
shaders/: liquid_glass.frag
src/: main.cpp
src/models/: CountdownGoal.cpp  CountdownGoal.h  CountdownModel.cpp  CountdownModel.h  FocusSession.cpp  FocusSession.h  Task.cpp  Task.h
src/services/: AppSettings.cpp  AppSettings.h  CategoryManager.cpp  CategoryManager.h  CountdownService.cpp  CountdownService.h  DatabaseManager.cpp  DatabaseManager.h  ExportService.cpp  ExportService.h  FocusHistoryService.cpp  FocusHistoryService.h  FocusSessionRules.h  FocusTimer.cpp  FocusTimer.h  LogicalDay.h  LogicalDayService.cpp  LogicalDayService.h  PhaseSoundService.cpp  PhaseSoundService.h  RoutineManager.cpp  RoutineManager.h  StatisticsService.cpp  StatisticsService.h  TaskManager.cpp  TaskManager.h
tests/: CoreLogicTests.cpp  CountdownServiceTests.cpp  FontAssetsTests.cpp  RobustnessTests.cpp  ServiceTests.cpp  ShaderAssetsTests.cpp  WallpaperAssetsTests.cpp
tests/qml/: preview_today_scene.qml  tst_add_task_dialog.qml  tst_background_wallpaper.qml  tst_countdown_ui.qml  tst_dashboard_view.qml  tst_edit_task_dialog.qml  tst_focus_immersive.qml  tst_focus_start_flow.qml  tst_focus_view.qml  tst_glass_components.qml  tst_immersion_sync.qml  tst_logical_day.qml  tst_mainwindow_ui_optimization.qml  tst_month_logical_day.qml  tst_phase2_layout.qml  tst_phase3_category_ui.qml  tst_phase3_export_ui.qml  tst_routine_dialog.qml  tst_segmented_switch.qml  tst_settings_components.qml  tst_settings_dialog.qml  tst_sidebar_ui_optimization.qml  tst_statistics_logical_day.qml  tst_task_item_edit.qml  tst_theme_palettes.qml  tst_theme_tokens.qml  tst_today_goal_card.qml  tst_today_rollover.qml  tst_ui_optimization.qml  tst_week_logical_day.qml
(+18 files in other folders)
